--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
     />
@@ -28,54 +32,58 @@
         </ul>
       </nav>
 
-      <address>
+      <address class="contacts">
         <ul>
           <li>
-            <a class="a" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="add" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li><a class="a" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="add" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="section">
+        <h1 class="head1">Effective Solutions for Your Business</h1>
         <img
           src="./images/Dark-bg.jpg"
           alt="Dark-bg"
           width="1440"
           height="600"
         />
-        <button type="button" class="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
 
       <section>
         <h2>Mastering Success</h2>
         <ul>
-          <li>
+          <li class="sec2">
             <h3>Strategy</h3>
-            <p>
+            <p class="sec2p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="sec2">
             <h3>Punctuality</h3>
-            <p>
+            <p class="sec2p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="sec2">
             <h3>Diligence</h3>
-            <p>
+            <p class="sec2p">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="sec2">
             <h3>Technologies</h3>
-            <p>
+            <p class="sec2p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -83,8 +91,8 @@
         </ul>
       </section>
 
-      <section id="team">
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="our-team">Our Team</h2>
         <img
           src="./images/Light-bg.jpg"
           alt="Light-bg"
@@ -92,46 +100,47 @@
           height="732"
         />
         <ul>
-          <li>
+          <li class="sec3">
             <img src="./images/mark-guerro.jpg" alt="mark-guerro" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="sec3h">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
-          <li>
+          <li class="sec3">
             <img src="./images/tom-ford.jpg" alt="tom-ford" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="sec3h">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="sec3">
             <img
               src="./images/camila-garcia.jpg"
               alt="camila-garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="sec3h">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
-          <li>
+          <li class="sec3">
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel-wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="sec3h">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
-      <section id="our-portfolio">
-        <h2>Our Portfolio</h2>
+
+      <section class="our-portfolio">
+        <h2 class="portfolio">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/banking-app.jpg" alt="banking-app" width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="sec4h">Banking App</h3>
+            <p class="sec4p">App</p>
           </li>
 
           <li>
@@ -140,8 +149,8 @@
               alt="cashless-payment"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="sec4h">Cashless Payment</h3>
+            <p class="sec4p">Marketing</p>
           </li>
 
           <li>
@@ -150,8 +159,8 @@
               alt="meditation-app"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="sec4h">Meditation App</h3>
+            <p class="sec4p">App</p>
           </li>
 
           <li>
@@ -160,8 +169,8 @@
               alt="taxi-service"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="sec4h">Taxi Service</h3>
+            <p class="sec4p">Marketing</p>
           </li>
 
           <li>
@@ -170,8 +179,8 @@
               alt="screen-illustrations"
               width="360"
             />
-            <h3>Screen Illustration</h3>
-            <p>Design</p>
+            <h3 class="sec4h">Screen Illustrations</h3>
+            <p class="sec4p">Design</p>
           </li>
 
           <li>
@@ -180,16 +189,16 @@
               alt="online-courses"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="sec4h">Online Courses</h3>
+            <p class="sec4p">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="/" class="logo">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="/" class="logo">WebStudio<span class="span">Studio</span></a>
+      <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
