--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </main>
 
     <footer class="footer">
-      <a href="/" class="logo">WebStudio<span class="span">Studio</span></a>
+      <a href="/" class="logo">Web<span class="span">Studio</span></a>
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
