--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <body>
     <header>
       <nav id="top">
-        <a href="/" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"
+          >Web<span class="span">Studio</span></a
+        >
         <ul>
           <li><a class="nav" href="studio">Studio</a></li>
           <li><a class="nav" href="portfolio">Portfolio</a></li>
@@ -47,7 +49,7 @@
     </header>
     <main>
       <section class="section">
-        <h1 class="head1">Effective Solutions for Your Business</h1>
+        <h1 class="head">Effective Solutions for Your Business</h1>
         <img
           src="./images/Dark-bg.jpg"
           alt="Dark-bg"
@@ -61,28 +63,28 @@
         <h2>Mastering Success</h2>
         <ul>
           <li class="sec2">
-            <h3>Strategy</h3>
+            <h3 class="sec2h">Strategy</h3>
             <p class="sec2p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="sec2">
-            <h3>Punctuality</h3>
+            <h3 class="sec2h">Punctuality</h3>
             <p class="sec2p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="sec2">
-            <h3>Diligence</h3>
+            <h3 class="sec2h">Diligence</h3>
             <p class="sec2p">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li class="sec2">
-            <h3>Technologies</h3>
+            <h3 class="sec2h">Technologies</h3>
             <p class="sec2p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -93,12 +95,6 @@
 
       <section class="team">
         <h2 class="our-team">Our Team</h2>
-        <img
-          src="./images/Light-bg.jpg"
-          alt="Light-bg"
-          width="1440"
-          height="732"
-        />
         <ul>
           <li class="sec3">
             <img src="./images/mark-guerro.jpg" alt="mark-guerro" width="264" />
