--- a/index.html
+++ b/index.html
@@ -24,25 +24,23 @@
   <body>
     <header>
       <nav id="top">
-        <a href="./index.html" class="logo"
-          >Web<span class="span">Studio</span></a
-        >
+        <a href="/" class="logo">Web<span class="span">Studio</span></a>
         <ul>
-          <li><a class="nav" href="studio">Studio</a></li>
-          <li><a class="nav" href="portfolio">Portfolio</a></li>
-          <li><a class="nav" href="contacts">Contacts</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="contacts">
         <ul>
           <li>
-            <a class="add" href="mailto:info@devstudio.com"
+            <a class="add-ress" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="add" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="add-ress" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -50,42 +48,36 @@
     <main>
       <section class="section">
         <h1 class="head">Effective Solutions for Your Business</h1>
-        <img
-          src="./images/Dark-bg.jpg"
-          alt="Dark-bg"
-          width="1440"
-          height="600"
-        />
-        <button class="button" type="button">Order Service</button>
+        <button class="button-tx" type="button">Order Service</button>
       </section>
 
       <section>
         <h2>Mastering Success</h2>
         <ul>
           <li class="sec2">
-            <h3 class="sec2h">Strategy</h3>
-            <p class="sec2p">
+            <h3 class="sec-2h">Strategy</h3>
+            <p class="sec-2p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="sec2">
-            <h3 class="sec2h">Punctuality</h3>
-            <p class="sec2p">
+            <h3 class="sec-2h">Punctuality</h3>
+            <p class="sec-2p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="sec2">
-            <h3 class="sec2h">Diligence</h3>
-            <p class="sec2p">
+            <h3 class="sec-2h">Diligence</h3>
+            <p class="sec-2p">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li class="sec2">
-            <h3 class="sec2h">Technologies</h3>
-            <p class="sec2p">
+            <h3 class="sec-2h">Technologies</h3>
+            <p class="sec-2p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -96,36 +88,36 @@
       <section class="team">
         <h2 class="our-team">Our Team</h2>
         <ul>
-          <li class="sec3">
+          <li class="sec-3">
             <img src="./images/mark-guerro.jpg" alt="mark-guerro" width="264" />
-            <h3 class="sec3h">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="sec-3h">Mark Guerrero</h3>
+            <p class="sec-3p">Product Designer</p>
           </li>
 
-          <li class="sec3">
+          <li class="sec-3">
             <img src="./images/tom-ford.jpg" alt="tom-ford" width="264" />
-            <h3 class="sec3h">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="sec-3h">Tom Ford</h3>
+            <p class="sec-3p">Frontend Developer</p>
           </li>
 
-          <li class="sec3">
+          <li class="sec-3">
             <img
               src="./images/camila-garcia.jpg"
               alt="camila-garcia"
               width="264"
             />
-            <h3 class="sec3h">Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="sec-3h">Camila Garcia</h3>
+            <p class="sec-3p">Marketing</p>
           </li>
 
-          <li class="sec3">
+          <li class="sec-3">
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel-wilson"
               width="264"
             />
-            <h3 class="sec3h">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="sec-3h">Daniel Wilson</h3>
+            <p class="sec-3p">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -135,8 +127,8 @@
         <ul>
           <li>
             <img src="./images/banking-app.jpg" alt="banking-app" width="360" />
-            <h3 class="sec4h">Banking App</h3>
-            <p class="sec4p">App</p>
+            <h3 class="sec-4h">Banking App</h3>
+            <p class="sec-4p">App</p>
           </li>
 
           <li>
@@ -145,8 +137,8 @@
               alt="cashless-payment"
               width="360"
             />
-            <h3 class="sec4h">Cashless Payment</h3>
-            <p class="sec4p">Marketing</p>
+            <h3 class="sec-4h">Cashless Payment</h3>
+            <p class="sec-4p">Marketing</p>
           </li>
 
           <li>
@@ -155,8 +147,8 @@
               alt="meditation-app"
               width="360"
             />
-            <h3 class="sec4h">Meditation App</h3>
-            <p class="sec4p">App</p>
+            <h3 class="sec-4h">Meditation App</h3>
+            <p class="sec-4p">App</p>
           </li>
 
           <li>
@@ -165,8 +157,8 @@
               alt="taxi-service"
               width="360"
             />
-            <h3 class="sec4h">Taxi Service</h3>
-            <p class="sec4p">Marketing</p>
+            <h3 class="sec-4h">Taxi Service</h3>
+            <p class="sec-4p">Marketing</p>
           </li>
 
           <li>
@@ -175,8 +167,8 @@
               alt="screen-illustrations"
               width="360"
             />
-            <h3 class="sec4h">Screen Illustrations</h3>
-            <p class="sec4p">Design</p>
+            <h3 class="sec-4h">Screen Illustrations</h3>
+            <p class="sec-4p">Design</p>
           </li>
 
           <li>
@@ -185,8 +177,8 @@
               alt="online-courses"
               width="360"
             />
-            <h3 class="sec4h">Online Courses</h3>
-            <p class="sec4p">Marketing</p>
+            <h3 class="sec-4h">Online Courses</h3>
+            <p class="sec-4p">Marketing</p>
           </li>
         </ul>
       </section>
@@ -198,7 +190,6 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-      <img src="./images/Dark-bg.jpg" alt="Dark-bg" width="1440" height="312" />
     </footer>
   </body>
 </html>
