--- a/index.html
+++ b/index.html
@@ -54,30 +54,30 @@
       <section>
         <h2>Mastering Success</h2>
         <ul>
-          <li class="sec2">
-            <h3 class="sec-2h">Strategy</h3>
-            <p class="sec-2p">
+          <li class="sec-two">
+            <h3 class="sec-twoh">Strategy</h3>
+            <p class="sec-twop">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="sec2">
-            <h3 class="sec-2h">Punctuality</h3>
-            <p class="sec-2p">
+          <li class="sec-two">
+            <h3 class="sec-twoh">Punctuality</h3>
+            <p class="sec-twop">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="sec2">
-            <h3 class="sec-2h">Diligence</h3>
-            <p class="sec-2p">
+          <li class="sec-two">
+            <h3 class="sec-twoh">Diligence</h3>
+            <p class="sec-twop">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li class="sec2">
-            <h3 class="sec-2h">Technologies</h3>
-            <p class="sec-2p">
+          <li class="sec-two">
+            <h3 class="sec-twoh">Technologies</h3>
+            <p class="sec-twop">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -88,36 +88,36 @@
       <section class="team">
         <h2 class="our-team">Our Team</h2>
         <ul>
-          <li class="sec-3">
+          <li class="sec-three">
             <img src="./images/mark-guerro.jpg" alt="mark-guerro" width="264" />
-            <h3 class="sec-3h">Mark Guerrero</h3>
-            <p class="sec-3p">Product Designer</p>
+            <h3 class="sec-threeh">Mark Guerrero</h3>
+            <p class="sec-threep">Product Designer</p>
           </li>
 
-          <li class="sec-3">
+          <li class="sec-three">
             <img src="./images/tom-ford.jpg" alt="tom-ford" width="264" />
-            <h3 class="sec-3h">Tom Ford</h3>
-            <p class="sec-3p">Frontend Developer</p>
+            <h3 class="sec-threeh">Tom Ford</h3>
+            <p class="sec-threep">Frontend Developer</p>
           </li>
 
-          <li class="sec-3">
+          <li class="sec-three">
             <img
               src="./images/camila-garcia.jpg"
               alt="camila-garcia"
               width="264"
             />
-            <h3 class="sec-3h">Camila Garcia</h3>
-            <p class="sec-3p">Marketing</p>
+            <h3 class="sec-threeh">Camila Garcia</h3>
+            <p class="sec-threep">Marketing</p>
           </li>
 
-          <li class="sec-3">
+          <li class="sec-three">
             <img
               src="./images/daniel-wilson.jpg"
               alt="daniel-wilson"
               width="264"
             />
-            <h3 class="sec-3h">Daniel Wilson</h3>
-            <p class="sec-3p">UI Designer</p>
+            <h3 class="sec-threeh">Daniel Wilson</h3>
+            <p class="sec-threep">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -127,8 +127,8 @@
         <ul>
           <li>
             <img src="./images/banking-app.jpg" alt="banking-app" width="360" />
-            <h3 class="sec-4h">Banking App</h3>
-            <p class="sec-4p">App</p>
+            <h3 class="sec-fourh">Banking App</h3>
+            <p class="sec-fourp">App</p>
           </li>
 
           <li>
@@ -137,8 +137,8 @@
               alt="cashless-payment"
               width="360"
             />
-            <h3 class="sec-4h">Cashless Payment</h3>
-            <p class="sec-4p">Marketing</p>
+            <h3 class="sec-fourh">Cashless Payment</h3>
+            <p class="sec-fourp">Marketing</p>
           </li>
 
           <li>
@@ -147,8 +147,8 @@
               alt="meditation-app"
               width="360"
             />
-            <h3 class="sec-4h">Meditation App</h3>
-            <p class="sec-4p">App</p>
+            <h3 class="sec-fourh">Meditation App</h3>
+            <p class="sec-fourp">App</p>
           </li>
 
           <li>
@@ -157,8 +157,8 @@
               alt="taxi-service"
               width="360"
             />
-            <h3 class="sec-4h">Taxi Service</h3>
-            <p class="sec-4p">Marketing</p>
+            <h3 class="sec-fourh">Taxi Service</h3>
+            <p class="sec-fourp">Marketing</p>
           </li>
 
           <li>
@@ -167,8 +167,8 @@
               alt="screen-illustrations"
               width="360"
             />
-            <h3 class="sec-4h">Screen Illustrations</h3>
-            <p class="sec-4p">Design</p>
+            <h3 class="sec-fourh">Screen Illustrations</h3>
+            <p class="sec-fourp">Design</p>
           </li>
 
           <li>
@@ -177,8 +177,8 @@
               alt="online-courses"
               width="360"
             />
-            <h3 class="sec-4h">Online Courses</h3>
-            <p class="sec-4p">Marketing</p>
+            <h3 class="sec-fourh">Online Courses</h3>
+            <p class="sec-fourp">Marketing</p>
           </li>
         </ul>
       </section>
