--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <nav id="top">
-        <a href="/" class="logo">Web<span class="span">Studio</span></a>
+        <a href="/" class="logo">Web<span class="span-logo">Studio</span></a>
         <ul>
           <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
@@ -185,7 +185,7 @@
     </main>
 
     <footer class="footer">
-      <a href="/" class="logo">Web<span class="span">Studio</span></a>
+      <a href="/" class="logo">Web<span class="span-logo">Studio</span></a>
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
