--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
     </main>
 
     <footer class="footer">
-      <a href="/" class="logo">Web<span class="span-logo">Studio</span></a>
+      <a href="/" class="footer-logo"
+        >Web<span class="footer-logo-p">Studio</span></a
+      >
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
